<package>
  <name>rtt_soem_robotiq</name>
  <version>0.0.1</version>
  <description>
     rtt_soem_robotiq.
  </description>

  <maintainer email="gianni.borghesan@kuleuven.be">Gianni Borghesan</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rtt_soem_robotiq</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ruben Smits</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>soem</build_depend>
  <build_depend>soem_master</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rtt_roscomm</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>soem</run_depend>
  <run_depend>soem_master</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  

</package>
